--- a/Css/Leon.Css
+++ b/Css/Leon.Css
@@ -1,425 +1,422 @@
-/* Start Variables*/
-
-/* End Variables*/
 /* Start Global Rules*/
 * {
-    -webkit-box-sizing: border-box;
-    -moz-box-sizing: border-box;
-    box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
 }
 html {
-    scroll-behavior: smooth;
+  scroll-behavior: smooth;
 }
 body {
-    font-family: 'Work Sans', sans-serif;
+  font-family: "Work Sans", sans-serif;
 }
 :root {
-    --main-color:#10cab7;
-    --section-padding:60px;
-    --section-background:#f6f6f6;
-    --paragraph-color:#777;
+  --main-color: #10cab7;
+  --section-padding: 60px;
+  --section-background: #f6f6f6;
+  --paragraph-color: #777;
 }
 .container {
-    padding-left: 15px;
-    padding-right: 15px;
-    margin-left: auto;
-    margin-right: auto;
+  padding-left: 15px;
+  padding-right: 15px;
+  margin-left: auto;
+  margin-right: auto;
 }
 /* Small */
 @media (min-width: 768px) {
-    .container {
-      width: 750px;
-    }
+  .container {
+    width: 750px;
   }
-  /* Medium */
-  @media (min-width: 992px) {
-    .container {
-      width: 970px;
-    }
+}
+/* Medium */
+@media (min-width: 992px) {
+  .container {
+    width: 970px;
   }
-  /* Large */
-  @media (min-width: 1200px) {
-    .container {
-      width: 1170px;
-    }
+}
+/* Large */
+@media (min-width: 1200px) {
+  .container {
+    width: 1170px;
   }
+}
 /* Start header */
 /* Start Components*/
 .special-heading {
-    color: #d4d4d4;
-    font-size: 100px;
-    text-align: center;
-    font-weight: 800;
-    letter-spacing: -4px;
-    margin: 0px;
+  color: #d4d4d4;
+  font-size: 100px;
+  text-align: center;
+  font-weight: 800;
+  letter-spacing: -4px;
+  margin: 0px;
 }
 .special-heading + p {
-    margin: -30px 0 0;
-    font-size: 20px;
-    text-align: center;
-    color: var(--paragraph-color);
+  margin: -30px 0 0;
+  font-size: 20px;
+  text-align: center;
+  color: var(--paragraph-color);
 }
-@media (max-width:767px) {
-    .special-heading{
-        font-size: 50px;
-    }
-    .special-heading + p{
-        margin: -15px 0 0;
-    }
+@media (max-width: 767px) {
+  .special-heading {
+    font-size: 50px;
+  }
+  .special-heading + p {
+    margin: -15px 0 0;
+  }
 }
 /* End Components*/
-.header{
-    padding: 20px;
+.header {
+  padding: 20px;
 }
 .header .container {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 .header .logo {
-    width: 70px;
+  width: 70px;
 }
-.header .links{
-    position: relative;
+.header .links {
+  position: relative;
 }
-.header .links .icon {
-    width: 30px;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: flex-end;
+.header .links #icon {
+  width: 30px;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: flex-end;
 }
-.header .links .icon span {
-    width: 100%;
-    background-color: #333;
-    height: 2px;
-    margin-bottom: 5px;
+.header .links #icon span {
+  width: 100%;
+  background-color: #333;
+  height: 2px;
+  margin-bottom: 5px;
 }
-.header .links .icon span:nth-child(2) {
-    width: 70%;
-    transition: 0.3s linear;
+.header .links #icon span:nth-child(2) {
+  width: 70%;
+  transition: 0.3s linear;
 }
-.header .links:hover .icon span:nth-child(2) {
-    width: 100%;
+.header .links:hover #icon span:nth-child(2) {
+  width: 100%;
 }
-.header .links:hover ul {
-    display: block;
-}
+/* .header .links:hover ul {
+  display: block;
+} */
 .header .links ul {
-    background-color: #eee;
-    list-style: none;
-    margin: 0;
-    padding: 0;
-    position: absolute;
-    right: 0;
-    min-width: 200px;
-    top: calc(100% + 15px);
-    display: none;  
-    z-index: 1;
+  background-color: #eee;
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  position: absolute;
+  right: 0;
+  min-width: 200px;
+  top: calc(100% + 15px);
+  display: none;
+  z-index: 1;
 }
 .header .links ul::before {
-    content: "";
-    position: absolute;
-    border: solid 10px;
-    border-color: transparent transparent #eee transparent;
-    right: 1px;
-    top: -20px;
+  content: "";
+  position: absolute;
+  border: solid 10px;
+  border-color: transparent transparent #eee transparent;
+  right: 1px;
+  top: -20px;
 }
 .header .links ul li a {
-    display: block;
-    padding: 15px;
-    text-decoration: none;
-    color: #333;
-    transition: 0.3s;
+  display: block;
+  padding: 15px;
+  text-decoration: none;
+  color: #333;
+  transition: 0.3s;
 }
 .header .links ul li:hover a {
-    padding-left: 25px;
+  padding-left: 25px;
 }
 .header .links ul li:not(:last-child) a {
-    border-bottom: 2px solid #ddd;
+  border-bottom: 2px solid #ddd;
 }
 /* End header */
 /* Start Landing Section */
 .landing {
-    background-image: url(../Images/Landing.jpg);
-    background-size: cover;    
-    height: calc(100vh - 68px);
-    position: relative;
+  background-image: url(../Images/Landing.jpg);
+  background-size: cover;
+  height: calc(100vh - 68px);
+  position: relative;
 }
 .landing .intro-text {
-    position: absolute;
-    left: 50%;
-    top: 50%;
-    transform: translate(-50% , -50%);
-    text-align: center;
-    width: 320px;
-    max-width: 100%;
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  text-align: center;
+  width: 320px;
+  max-width: 100%;
 }
 .landing .intro-text h1 {
-    margin: 0px;
-    color: var(--main-color);
-    font-size: 50px;
-    font-weight: bold;
+  margin: 0px;
+  color: var(--main-color);
+  font-size: 50px;
+  font-weight: bold;
 }
 .landing .intro-text p {
-    font-size: 19px;
-    line-height: 1.8;
+  font-size: 19px;
+  line-height: 1.8;
 }
 /* End Landing Section */
 /* Start Feature section */
 .features {
-    padding-top: var(--section-padding);
-    padding-bottom:  var(--section-padding);
-    background-color: var(--section-background);
+  padding-top: var(--section-padding);
+  padding-bottom: var(--section-padding);
+  background-color: var(--section-background);
 }
 .features .container {
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(300px , 1fr));
-    gap: 20px;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+  gap: 20px;
 }
 .features .feat {
-    text-align: center;
-    padding: 10px;
+  text-align: center;
+  padding: 10px;
 }
 .features .feat i {
-    color: var(--main-color);
+  color: var(--main-color);
 }
 .features .feat h3 {
-    font-weight: 800;
-    margin: 30px 0;
+  font-weight: 800;
+  margin: 30px 0;
 }
 .features .feat p {
- line-height: 1.8;
- color: var(--paragraph-color);
- font-size: 15px;
+  line-height: 1.8;
+  color: var(--paragraph-color);
+  font-size: 15px;
 }
 /* End Feature section */
 /* Start Services */
 .services {
-    padding-top:  var(--section-padding);
-    padding-bottom:  var(--section-padding);
+  padding-top: var(--section-padding);
+  padding-bottom: var(--section-padding);
 }
 .services .services-content {
-    margin-top: 100px;
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(300px , 1fr));
-    gap: 20px;
+  margin-top: 100px;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+  gap: 20px;
 }
- .services .services-content .srv {
-   display: flex;
-    margin-bottom: 40px;
+.services .services-content .srv {
+  display: flex;
+  margin-bottom: 40px;
 }
-@media (max-width:767px) {
-    .services .services-content .srv {
-        flex-direction: column;
-        text-align: center;
-    }
+@media (max-width: 767px) {
+  .services .services-content .srv {
+    flex-direction: column;
+    text-align: center;
+  }
 }
 .services .services-content i {
-    color: var(--main-color);
-    flex-basis: 60px;
-} 
+  color: var(--main-color);
+  flex-basis: 60px;
+}
 .services .services-content .srv .text {
-    flex: 1;
-} 
+  flex: 1;
+}
 .services .services-content .srv .text h3 {
-    margin: 0;
-} 
+  margin: 0;
+}
 .services .services-content .srv .text p {
-    color: var(--paragraph-color);
-    font-weight: 300;
-    line-height: 1.8;
-} 
-.services .container .image{
-    text-align: center;
-    position: relative;
+  color: var(--paragraph-color);
+  font-weight: 300;
+  line-height: 1.8;
+}
+.services .container .image {
+  text-align: center;
+  position: relative;
 }
 .services .container .image::after {
-   content: "";
-   position: absolute;
-   background-color: #2c4755;
-   width: 100px;
-   height: calc(100% + 100px);
-   top: -50px;
-   right: 0;
-   z-index: -1;
+  content: "";
+  position: absolute;
+  background-color: #2c4755;
+  width: 100px;
+  height: calc(100% + 100px);
+  top: -50px;
+  right: 0;
+  z-index: -1;
 }
 .services .container .image img {
-   width: 260px;
+  width: 260px;
 }
-@media(max-width: 991px) {
-    .services .container .image{
-        display: none;
-    }
+@media (max-width: 991px) {
+  .services .container .image {
+    display: none;
+  }
 }
 /* End Services */
 /* start portfolio */
-.portfolio{
-    padding-top: var(--section-padding);
-    padding-bottom: var(--section-padding);
-    background-color: var(--section-background);
+.portfolio {
+  padding-top: var(--section-padding);
+  padding-bottom: var(--section-padding);
+  background-color: var(--section-background);
 }
 .portfolio .portfolio-content {
-    margin-top: 80px;
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(300px , 1fr));
-    gap: 30px;
+  margin-top: 80px;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+  gap: 30px;
 }
 .portfolio .portfolio-content .card {
-    background-color: white;
+  background-color: white;
 }
 .portfolio .portfolio-content .card img {
-   max-width: 100%;
+  max-width: 100%;
 }
 .portfolio .portfolio-content .info {
   padding: 20px;
-} 
-.portfolio .portfolio-content .info h3{
+}
+.portfolio .portfolio-content .info h3 {
   margin: 0;
-} 
-.portfolio .portfolio-content .info p{
-    color: var(--paragraph-color);
-    line-height: 1.8;
-    margin-bottom: 0;
-} 
+}
+.portfolio .portfolio-content .info p {
+  color: var(--paragraph-color);
+  line-height: 1.8;
+  margin-bottom: 0;
+}
 /* end portfolio */
 /* start about */
 .about {
-    padding-top: var(--section-padding);
-    padding-bottom: calc(var(--section-padding) + 60px);
+  padding-top: var(--section-padding);
+  padding-bottom: calc(var(--section-padding) + 60px);
 }
-.about .about-content{
-    margin-top: 100px;
-    display: flex;
-    justify-content: space-between;
-    flex-wrap: wrap;
-    justify-content: space-between;
-}
-@media (max-width : 991px) {
-    .about .about-content{
-        flex-direction: column;
-        text-align: center;
-    }
-    .about .about-content .image{ 
-        margin-left: auto;
-        margin-right: auto;
-        margin-bottom: 50px;
-    }
-}
-.about .about-content .image{  
-    position: relative;
-    width: 250px;
-    height: 375px;
-}
-.about .about-content .image::before{
-    content: "";
-    position: absolute;
-    background-color: #ebeced;
-    width: 100px;
-    height: calc(100% + 100px);
-    top: -50px;
-    left: -20px;
-    z-index: -1;
-}
-.about .about-content .image::after{
-    content: "";
-    position: absolute;
-    width: 120px;
-    height: 300px;
-    border-left: 70px solid var(--main-color);
-    border-bottom: 70px solid var(--main-color);
-    z-index: -1;
-    right: -150px;
-    top:-40px;
+.about .about-content {
+  margin-top: 100px;
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  justify-content: space-between;
 }
 @media (max-width: 991px) {
-    .about .about-content .image::before,
-    .about .about-content .image::after{
-        display: none;
-    }
-}
-.about .about-content .text{
-    flex-basis: calc(100% - 500px);
-}
-.about .about-content .text p:first-child{
-    font-weight: bold;
-    color: black;
-    line-height: 1.8;
+  .about .about-content {
+    flex-direction: column;
+    text-align: center;
+  }
+  .about .about-content .image {
+    margin-left: auto;
+    margin-right: auto;
     margin-bottom: 50px;
+  }
 }
-.about .about-content .text p:last-of-type{
-    color: var(--paragraph-color);
-    margin-top: 20px;
+.about .about-content .image {
+  position: relative;
+  width: 250px;
+  height: 375px;
 }
-.about .about-content .text hr{
-    width: 50%;
-    display: inline-block;
-    border-color:var(--main-color);
+.about .about-content .image::before {
+  content: "";
+  position: absolute;
+  background-color: #ebeced;
+  width: 100px;
+  height: calc(100% + 100px);
+  top: -50px;
+  left: -20px;
+  z-index: -1;
 }
-.about .about-content .image img{  
-    max-width: 100%;
+.about .about-content .image::after {
+  content: "";
+  position: absolute;
+  width: 120px;
+  height: 300px;
+  border-left: 70px solid var(--main-color);
+  border-bottom: 70px solid var(--main-color);
+  z-index: -1;
+  right: -150px;
+  top: -40px;
+}
+@media (max-width: 991px) {
+  .about .about-content .image::before,
+  .about .about-content .image::after {
+    display: none;
+  }
+}
+.about .about-content .text {
+  flex-basis: calc(100% - 500px);
+}
+.about .about-content .text p:first-child {
+  font-weight: bold;
+  color: black;
+  line-height: 1.8;
+  margin-bottom: 50px;
+}
+.about .about-content .text p:last-of-type {
+  color: var(--paragraph-color);
+  margin-top: 20px;
+}
+.about .about-content .text hr {
+  width: 50%;
+  display: inline-block;
+  border-color: var(--main-color);
+}
+.about .about-content .image img {
+  max-width: 100%;
 }
 /* end about */
 /* start contact */
-.contact{
-    padding-top: var(--section-padding);
-    padding-bottom: var(--section-padding);
-    background-color: var(--section-background);
+.contact {
+  padding-top: var(--section-padding);
+  padding-bottom: var(--section-padding);
+  background-color: var(--section-background);
 }
-.contact .contact-content{
-    text-align: center;
-    padding-top: var(--section-padding);
-    padding-bottom: var(--section-padding);
+.contact .contact-content {
+  text-align: center;
+  padding-top: var(--section-padding);
+  padding-bottom: var(--section-padding);
 }
-.contact .contact-content .label{
-    margin-bottom: 15px;
-    color: #2c4755;
-    font-size: 35px;
-    font-weight: 800;
-    letter-spacing: -1px;
+.contact .contact-content .label {
+  margin-bottom: 15px;
+  color: #2c4755;
+  font-size: 35px;
+  font-weight: 800;
+  letter-spacing: -1px;
 }
-.contact .contact-content a{
-    display: block;
-    margin-bottom: 10px;
-    font-size: 35px;
-    font-weight: 800;
-    color: var(--main-color);
-    text-decoration: none;
+.contact .contact-content a {
+  display: block;
+  margin-bottom: 10px;
+  font-size: 35px;
+  font-weight: 800;
+  color: var(--main-color);
+  text-decoration: none;
 }
-@media (max-width:767px){
-    .contact .contact-content .label,
-    .contact .contact-content a{
-        font-size: 25px;
-    }
+@media (max-width: 767px) {
+  .contact .contact-content .label,
+  .contact .contact-content a {
+    font-size: 25px;
+  }
 }
-.contact .contact-content p{
-    display: inline;
-    margin-right: 5px;
+.contact .contact-content p {
+  display: inline;
+  margin-right: 5px;
 }
 .contact .contact-content .social {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin-top: 20px;
-    font-size: 16px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 20px;
+  font-size: 16px;
 }
-.contact .contact-content .social i{
-    margin-left: 10px;
-    color:#2c4755;
+.contact .contact-content .social i {
+  margin-left: 10px;
+  color: #2c4755;
 }
 
 /* end contact */
 /* start footer */
-.footer{
-    background-color: #2c4755;
-    width: 100%;
-    color: white;
-    font-size: 18px;
-    padding: 30px 10px;
-    text-align: center;
+.footer {
+  background-color: #2c4755;
+  width: 100%;
+  color: white;
+  font-size: 18px;
+  padding: 30px 10px;
+  text-align: center;
 }
 
-.footer span{
-    color: var(--main-color);
-    font-weight: bold;
+.footer span {
+  color: var(--main-color);
+  font-weight: bold;
 }
 /* end footer */
